Refactor: 스트림 반환 형식 수정